--- a/package.json
+++ b/package.json
@@ -10,14 +10,25 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "@supabase/auth-helpers-nextjs": "0.5.3",
+    "@supabase/auth-helpers-react": "0.3.1",
+    "@supabase/supabase-js": "2.4.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "lodash.debounce": "4.0.8",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "zod": "3.20.2"
+  },
+  "devDependencies": {
+    "@types/lodash.debounce": "4.0.7",
+    "autoprefixer": "10.4.13",
+    "postcss": "8.4.21",
+    "tailwindcss": "3.2.4"
   }
 }
