--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "@next/font": "13.1.2",
     "@supabase/auth-helpers-nextjs": "0.5.3",
     "@supabase/auth-helpers-react": "0.3.1",
+    "@supabase/auth-ui-react": "0.2.6",
     "@supabase/supabase-js": "2.4.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "classnames": "2.3.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "formik": "2.2.9",
     "lodash.debounce": "4.0.8",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4",
+    "yup": "0.32.11",
     "zod": "3.20.2"
   },
   "devDependencies": {
