--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/auth-helpers-react": "0.3.1",
     "@supabase/auth-ui-react": "0.2.6",
     "@supabase/supabase-js": "2.4.0",
+    "@tailwindcss/forms": "0.5.3",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
