--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "2.0.3",
     "typescript": "4.9.4",
+    "use-debounce": "9.0.3",
     "yup": "0.32.11",
     "zod": "3.20.2"
   },
